--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <ion-title>
       Contatos
     </ion-title>
-    <button menuToggle>
+    <button menuToggle (click)="addContact()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-navbar>
